# point-cloud-memory

./: .gitignore  dataset.py  datasets.py  download_ycb.py  main.py  network.py  pyproject.toml  show.py  show_bags.py  show_dataset_transformations.py  show_recall.py  show_reconstruction.py  training.py
models/: __init__.py  ae.py  memory.py  vae.py
models/components/: decoders.py  encoders.py
scripts/: check_cpu.sbatch  check_gpu.sbatch
training/: __init__.py  hopfield.py  loop.py  metrics.py
