[project]
name = "pointcloud-hopfield-networks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "h5py>=3.15.1",
    "imageio>=2.37.2",
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "pyminiply>=0.2.3",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "viser>=1.0.16",
    "pytorch3d",
    "typer>=0.21.1",
    "hopfield-layers",
]

[tool.uv.sources]
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d.git" }
hopfield-layers = { git = "https://github.com/ml-jku/hopfield-layers.git" }

[tool.uv.extra-build-dependencies]
pytorch3d = ["torch"]

[tool.ruff]
line-length = 140

[dependency-groups]
dev = [
    "icecream>=2.1.8",
]
